rollout-apps/dev/canary-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
        - name: canary-demo
          # image: idanarbel/rollouts-demo:purple
          image: idanarbel/rollouts-demo:green
          # image: idanarbel/rollouts-demo:green
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      canaryService: canary-demo-preview
      stableService: canary-demo
      steps:
        # - setWeight: 50
        # - pause: {}
        - analysis:
            templates:
              - templateName: conditional-tests
